{
  "@@locale": "tr",

  "appTitle": "101 Okey Açar Mı",
  "commonBack": "Geri",
  "commonGoStart": "Başlangıca dön",

  "navHome": "Ana",
  "navHistory": "Geçmiş",
  "navSettings": "Ayar",
...
